--- a/Spherum.Mobile/Spherum.Mobile.csproj
+++ b/Spherum.Mobile/Spherum.Mobile.csproj
@@ -21,7 +21,7 @@
         <Nullable>enable</Nullable>
 
         <!-- Display name -->
-        <ApplicationTitle>Spherum.Mobile</ApplicationTitle>
+        <ApplicationTitle>Spherum</ApplicationTitle>
 
         <!-- App Identifier -->
         <ApplicationId>com.companyname.spherum.mobile</ApplicationId>
@@ -60,6 +60,12 @@
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)"/>
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0"/>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Spherum.Mobile.Common\Spherum.Mobile.Common.csproj" />
+      <ProjectReference Include="..\Spherum.Mobile.Services\Spherum.Mobile.Services.csproj" />
+      <ProjectReference Include="..\Spherum.Mobile.ViewModels\Spherum.Mobile.ViewModels.csproj" />
     </ItemGroup>
 
 </Project>
