--- a/Spherum.Mobile.Common/Spherum.Mobile.Common.csproj
+++ b/Spherum.Mobile.Common/Spherum.Mobile.Common.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="CommunityToolkit.Maui" Version="9.0.2" />
+      <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    </ItemGroup>
+
 </Project>
