--- a/Spherum.Mobile.Common/Spherum.Mobile.Common.csproj
+++ b/Spherum.Mobile.Common/Spherum.Mobile.Common.csproj
@@ -9,6 +9,14 @@
     <ItemGroup>
       <PackageReference Include="CommunityToolkit.Maui" Version="9.0.2" />
       <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Localization" Version="8.0.10" />
+      <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.1" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.2" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" />
+      <PackageReference Include="Serilog.Expressions" Version="5.0.0" />
+      <PackageReference Include="Serilog.Extensions.Logging" Version="8.0.0" />
+      <PackageReference Include="Serilog.Sinks.File" Version="6.0.0" />
     </ItemGroup>
 
 </Project>
