--- a/Spherum.Mobile.UnitTests/Spherum.Mobile.UnitTests.csproj
+++ b/Spherum.Mobile.UnitTests/Spherum.Mobile.UnitTests.csproj
@@ -12,4 +12,24 @@
       <ProjectReference Include="..\Spherum.Mobile.ViewModels\Spherum.Mobile.ViewModels.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="coverlet.collector" Version="6.0.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="FluentAssertions" Version="6.12.1" />
+      <PackageReference Include="FluentAssertions.Reactive" Version="0.2.0" />
+      <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.11.1" />
+      <PackageReference Include="NSubstitute" Version="5.1.0" />
+      <PackageReference Include="NSubstitute.Analyzers.CSharp" Version="1.0.17">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+      <PackageReference Include="xunit" Version="2.9.2" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
+    </ItemGroup>
+
 </Project>
